fix alignment of logo in navbar

--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -43,3 +43,7 @@ nav {
   font-weight: 400;
   line-height: 20px; /* 142.857% */
 }
+
+.logo {
+  vertical-align: middle;
+}
